feat: Add ci workflows and release-drafter and ktlint refactor